<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/detailFragment"
            android:icon="@drawable/ic_menu_users"
            android:title="@string/menu_users" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_menu__calculator"
            android:title="@string/menu_calculator" />
        <item
            android:id="@+id/nav_scanner"
            android:icon="@drawable/ic_menu_card_scanner"
            android:title="@string/scan_card" />
    </group>
</menu>