<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:paddingLeft="@dimen/bus_stop_item_horizontal_padding"
    android:paddingTop="@dimen/bus_stop_item_vertical_padding"
    android:paddingRight="@dimen/bus_stop_item_horizontal_padding"
    android:paddingBottom="@dimen/bus_stop_item_vertical_padding">

    <TextView
        android:id="@+id/tvTransactionUser"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/user"
        android:textColor="@color/secondaryTextColor" />

    <TextView
        android:id="@+id/tvCardNumber"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/card_number"
        android:textColor="@color/secondaryTextColor" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/date"
        android:textColor="@color/secondaryTextColor" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="15dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/time"
        android:textColor="@color/secondaryTextColor" />


</LinearLayout>